--- a/src/components/QuizMaker/QuizMaker.scss
+++ b/src/components/QuizMaker/QuizMaker.scss
@@ -23,3 +23,16 @@
     cursor: pointer;
   }
 }
+
+pre {
+  color: black;
+  background: white;
+  width: 700px;
+  border: 2px solid black;
+  border-radius: 1rem;
+  padding: 1rem;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  white-space: pre-wrap;
+}
