--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*:focus {
+/* *:focus {
   outline: none;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
